Update and rename GALERIA DE COMIDA.HTML to index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	</TR>
 </TABLE>
 
-
+<td><a href="https://www.blogger.com/blog/post/edit/2320360495585578320/503000222375058052">SESIÓN #1Haz clic aquí</a></td>
 
 
 
