--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 	
 	</TR>
 	<TR>
-		<TD><center><img src="https://www.cronista.com/files/image/458/458099/62619b1247afd.jpg" width="500"height="600"></td></center></TD><TD><center><img src="https://cdn.sanity.io/images/jsdrzfkj/production-esmx/f4e2c09fadb6448eeac86dc6b680a46aefb6d54c-1200x800.jpg?w=1200&h=800&auto=format" width="500"height="600"></td></center></TD>
+		<TD><center><img src="https://www.cronista.com/files/image/458/458099/62619b1247afd.jpg" width="500"height="600"></td></center></TD><TD><center><img src="https://cdn.sanity.io/images/jsdrzfkj/production-esmx/f4e2c09fadb6448eeac86dc6b680a46aefb6d54c-1200x800.jpg?w=1200&h=800&auto=format" width="500"height="600"></td></center></TD><td><a href="https://www.blogger.com/blog/post/edit/2320360495585578320/503000222375058052">SESIÓN #1Haz clic aquí</a></td>
+
 	</TR>
 </TABLE>
 
